--- a/src/main/resources/templates/Facebook/login_register.html
+++ b/src/main/resources/templates/Facebook/login_register.html
@@ -153,6 +153,7 @@
     <script src="assets/js/uikit.js"></script>
     <script src="assets/js/simplebar.js"></script>
     <script src="assets/js/custom.js"></script>
+    <script src="assets/js/realTimeMessage.js"></script>
     <script src="assets/js/bootstrap-select.min.js"></script>
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 
