--- a/src/main/resources/templates/Facebook/handleimg.html
+++ b/src/main/resources/templates/Facebook/handleimg.html
@@ -1100,7 +1100,7 @@
 		        loading.style.display = 'block';
 		
 		        // TODO: Replace with your actual API key
-		        var apiKey = 'wx7m59vqcucc2c2s5';
+		        var apiKey = 'wxbv0btolxlrgi4ud';
 		        var formData = new FormData();
 		        formData.append('sync', '1');
 		        formData.append('type', 'face');
